@@ -1,3 +1,15 @@
+2012-09-12  Michael Saboff  <msaboff@apple.com>
+
+        Build fixed for http://trac.webkit.org/changeset/128243
+
+        Unreviewed build fix.
+
+        Change UnicodeString::extract for gcc based on ICU fix described in
+        http://bugs.icu-project.org/trac/ticket/8197.
+
+        * icu/unicode/unistr.h:
+        (UnicodeString::extract):
+
 2012-09-12  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Web Inspector: NMI move String* instrumentation to wtf.
